# agent-shield

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  app.py  debug_model.py  fix_and_test.bat  fix_and_test.sh  pyproject.toml  pytest.ini  requirements-minimal.txt  requirements-no-ml.txt  requirements-security-only.txt  requirements-train.txt  requirements.txt  requirements.txt.backup  server.pid  setup.ps1  setup.sh  test_debug.py  test_debug2.py  test_preprocess.py  ui.py  vigil_patterns.yaml
agent_shield.egg-info/: PKG-INFO  SOURCES.txt
agent_shield_int.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
api/: auth.py  banner.py  keys.py  main.py  main_l1_only.py  secrets_manager.py
cli/: main.py
detectors/: bert_classifier.py  l2_5_mdeberta.py  l3_custom.py  l3_guardrails.py  l3_mdeberta.py  l4_custom.py  l4_groq.py  l5_groq.py  severity.py  train_bert.py  vigil_patterns.yaml  vigil_scanner.py
docs/: ALL_FIXES_COMPLETE.md  BANDIT_LOW_ERRORS_RESOLVED.md  COMPLETE_SUMMARY.md  DEPLOYMENT_GUIDE.md  FIX_STATUS_AFTER_REVERT.md  INSTALL_FIX.md  L3_FALSE_POSITIVE_FIX.md  L3_FIX_FINAL_RESULTS.md  MANUAL_TESTING.md  QUICK_REFERENCE.md  REDTEAM_RESULTS.md  SECURITY_FIXES_REPORT.md  SECURITY_REPORT.md  VENV_QUICK_START.md
reports/: daily_report.md
scripts/: analyze_encoding.py  build_dataset.py  daily_report.py  eval_adversarial.py  eval_results.csv  export_training_data.py  fetch_payloads.py  install_security_fixes.py  trace_flow.py  train.py  verify_labels.py
tests/: Untitled  debug_k1llc0mmand.py  test_edge_cases.py  (+10 more)
(+20 files in other folders)
