[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-shield-int"
version = "1.0.4"
description = "LLM Prompt Injection Detection CLI — 3-layer detection (Vigil + DistilBERT ONNX + Rules)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = []

authors = [
  { name = "Sandeep", email = "sandeep.int.2005@gmail.com" }
]

keywords = ["llm", "prompt-injection", "security", "ai-security", "nlp"]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Topic :: Security",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/Sandeep-int/agent-shield"
"Bug Tracker" = "https://github.com/Sandeep-int/agent-shield/issues"
"HuggingFace Space" = "https://huggingface.co/spaces/Sandeep120205/agent-shield"

[project.scripts]
agent-shield = "cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*"]